<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>AuditProcessor</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.lang.invoke=ALL-UNNAMED</argLine>
        </configuration>
        <groupId>org.apache.maven.plugins
        </groupId> <!-- Ensure you're using an up-to-date version -->
        <version>3.1.2</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>--enable-preview</compilerArgs>
          <source>21</source>
          <target>21</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>1.18.36</version>
    </dependency>
    <dependency>
      <artifactId>feign-jackson</artifactId>
      <groupId>io.github.openfeign</groupId>
      <version>11.0</version>
    </dependency>
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <version>2.12.3</version> <!-- Ensure this version is compatible -->
    </dependency>
    <dependency>
      <artifactId>reflections</artifactId>
      <groupId>org.reflections</groupId>
      <version>0.10.2</version>
    </dependency>

    <dependency>
      <artifactId>slf4j-log4j12</artifactId>
      <groupId>org.slf4j</groupId>
      <version>1.7.5</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>5.11.4</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.wiremock/wiremock-standalone -->
    <dependency>
      <artifactId>wiremock-standalone</artifactId>
      <groupId>org.wiremock</groupId>
      <scope>test</scope>
      <version>3.10.0</version>
    </dependency>


    <!-- adding -add-opens java.base/java.lang.invoke=ALL-UNNAMED to allow Feign to access the restricted MethodHandles.Lookup class.-->
    <dependency>
      <artifactId>spring-cloud-starter-openfeign</artifactId>
      <groupId>org.springframework.cloud</groupId>
      <version>3.1.9</version> <!-- Check for the latest version -->
    </dependency>


  </dependencies>
  <groupId>com.phonepe.payments.fundtransfer</groupId>
  <modelVersion>4.0.0</modelVersion>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <version>1.1-SNAPSHOT</version>

</project>